# kSpider

./: .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  bins.cpp  build_wrapper.sh  check_bin.cpp  export_bin.cpp  export_colors_count.cpp  export_sig.cpp  kSpider.cpp  kSpider_version.py  main.cpp  new_pairwise.py  pairwise.cpp  rx_clustering.py  setup.py  sig_to_bin.cpp  sigs_to_bins.cpp  validate.cpp  validate_bins.sh
.github/workflows/: cibuildwheel.yml  ubuntu.yml
apps/: cluster_config.yml  dump_kframe.cpp  dump_kmer_count.cpp  fastq_to_kf.cpp  fastq_to_kf.smk  index_kframes.cpp  kmc_to_kfs.cpp  normalize_pe.cpp  percentile.cpp  remove_percentile.cpp  remove_singletones.cpp  repr_sketches.cpp  sourmash_pairwise_brute_force.py
docs/: index.md
include/: combinations.hpp  kCluster.hpp  kSpider.hpp  pivote.hpp  sqlite_helper.hpp  virtualQs.hpp
lib/json_parser/: RSJparser.tcc  RSJparser.tcc.hpp
pykSpider/internal/: __init__.py
pykSpider/kSpider/: __init__.py  click_context.py  kSpider_main.py  ks_pairwise.py
pykSpider/kSpider2/: __init__.py  click_context.py  customLogger.py  kSpider_main.py  kSpider_version.py  ks_clustering.py  ks_dataset_indexing.py  ks_export.py  ks_fastx_to_kfs.py  ks_index.py  ks_pairwise.py
scripts/: clusters_convert.py  symbolic_split_data.py
src/: bins_indexing.cpp  combinations.cpp  fastx_to_kf.cpp  index.cpp  pairwise.cpp  pivote.cpp  sourmash_indexing.cpp  sqlite_helper.cpp  virtualQs.cpp
src/swig_interfaces/: kSpider_internal.i
test/: generate_golden_files.py  kspider_run.py  validate.py
visualization/: pairwise_ids_conversion.py  pairwise_to_dendrogram.py  pairwise_to_distance_matrix.py
